# b.ob

./: .gitignore  README.md  shut_down.py
src/Casadi_MPC/: package.xml  setup.cfg  setup.py
src/Casadi_MPC/Casadi_MPC/: casadi_mpc.py
src/MotorDriver/: CMakeLists.txt
src/MotorDriver/include/: MotorDriver.h
src/MotorDriver/src/: MotorDriver.cpp  runMotor.cpp
src/bob/: CMakeLists.txt  package.xml  run_sim.sh
src/bob/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/bob/log/: latest_build
src/bob/motor_encoder_library/: CMakeLists.txt  compile.sh
src/bob/motor_encoder_library/src/: MotorEncoder.cpp
src/bob/motor_encoder_library/test/: motor_encoder_test.cpp
src/bob/src/config/: view_bot.rviz
src/bob/src/description/: accelerometer.xacro  camera.xacro  robot.gazebo  robot.urdf.xacro
src/bob/src/launch/: launch_sim.launch.py
src/bob_base/: CMakeLists.txt  bob_hardware.xml  package.xml
src/bob_base/include/bob_base/: DEV_Config.h  Debug.h  PCA9685.h  bob_hardware.hpp  diffbot_system.hpp  motor.hpp  motor_encoder.hpp  wheel.hpp
src/bob_base/src/: DEV_Config.c  PCA9685.c  bob_hardware.cpp  diffbot_system.cpp  motor.cpp  motor_encoder.cpp  wheel.cpp
src/bob_base/src/diffdrive_bob/: CMakeLists.txt  README.md  diffdrive_bob.xml  package.xml
src/bob_base/src/ros2_control_demos/: CMakeLists.txt  package.xml
src/bob_bringup/: CMakeLists.txt  mpu6050_hardware.xml  package.xml
src/bob_bringup/config/: bob_controllers.yaml  diffbot_controllers.yaml  gazebo_ros2_ctl_use_sim.yaml
src/bob_bringup/description/urdf/: diffbot.urdf.xacro
src/bob_bringup/include/bob_bringup/: mpu6050_hardware_interface.hpp  mpu6050_lib.h
src/bob_bringup/launch/: assisted_driving.launch.py  basic_driving.launch.py  camera.launch.py  diffbot.launch.py  rpilidar.launch.py  rplidar.launch.py  test.launch.py  view_rplidar.launch.py
src/bob_bringup/rviz/: rplidar.rviz
src/bob_bringup/src/: controller_node.cpp  drive_selection_node.cpp  mpu6050_covariances.cpp  mpu6050_hardware_interface.cpp  mpu6050_lib.cpp  mpu6050_offsets.cpp
src/bob_description/: CMakeLists.txt  package.xml
src/bob_description/launch/: launch_sim.launch.py  view_robot.launch.py
src/bob_description/ros2_control/: bob.ros2_control.xacro  bob_ros2_control.xacro  diffbot.ros2_control.xacro
src/bob_description/urdf/: bob.urdf.xacro  bob_core.xacro  camera.xacro  diffbot.urdf.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  radar_f.xacro  radar_r.xacro  robot_core.xacro
src/bob_detection/: package.xml  setup.cfg  setup.py
src/bob_detection/bob_detection/: detection_node.py
src/bob_navigation/: CMakeLists.txt  package.xml
src/bob_navigation/config/: cost_map_filter.yaml  ekf.yaml  mapper_params_localisation.yaml  nav2_params.yaml
src/bob_navigation/include/: ceres_cost_functor.hpp
src/bob_navigation/launch/: amcl.launch.py  global_path_planner.launch.py  keepout_filter.launch.py  localise.launch.py  navigation.launch.py  sim_continue_slam.launch.py  sim_global_path_planner.launch.py  sim_localisation.launch.py  sim_navigation.launch.py
src/bob_navigation/maps/: cone_map.pgm  cone_map.yaml  cone_map_ser.data  cones_map.pgm  cones_map.yaml  cones_map_ser.data
src/bob_navigation/maps/cones_map/: cones_map.data
src/bob_navigation/maps/people_map/: people_map.pgm  people_map.yaml
src/bob_navigation/src/: mpc_obstacle_avoid.cpp
src/bob_pid/: CMakeLists.txt  package.xml
src/bob_pid/config/: pid_params.yaml
src/bob_pid/include/bob_pid/: pid_node.hpp
src/bob_pid/launch/: pid_node_launch.py
src/bob_pid/src/: pid_node.cpp
src/bob_scan/: CMakeLists.txt  package.xml
src/bob_scan/csv/: scan_data.csv
src/bob_scan/scripts/: keyboard_input_node.py
src/bob_scan/src/: scan_node.cpp
src/bob_simulation/: CMakeLists.txt  package.xml
src/bob_simulation/config/: bob_controllers.yaml
src/bob_simulation/launch/: launch_sim.launch.py  launch_sim_people.launch.py  rsp.launch.py
src/bob_simulation/worlds/: creative_room.world  dynamic_obstacle.world  empty_lidar.world  empty_world.world  inf.world  obstacle.world  obstacle_camera.world  obstacle_lidar.world  ppa_scenario.world  scenario_1.world  scenario_2.world
src/bob_simulation/worlds/gazebo_control/: obstacle_lidar.world
src/bob_simulation/worlds/ros2_control/: empty_lidar.world
src/bob_test/: CMakeLists.txt  package.xml
src/bob_test/launch/: test.launch.py
src/bob_test/src/: test_node.cpp
src/gazebo_radar_plugin/: CMakeLists.txt  package.xml
src/gazebo_radar_plugin/include/gazebo_radar_plugin/: ModeCRadarPlugin.hh
src/gazebo_radar_plugin/msg/: ModeCRadar.msg  ModeCRadarSummary.msg
src/gazebo_radar_plugin/src/: ModeCRadarPlugin.cc
src/lidar_segmentation/: package.xml  setup.cfg  setup.py
src/lidar_segmentation/lidar_segmentation/: line_segment_polygon_node.py
src/map_ray_casting/: package.xml  setup.cfg  setup.py
src/map_ray_casting/map_ray_casting/: ray_cast_node.py
src/motor/: CMakeLists.txt  compile.sh
src/motor/include/: MotorEncoder.hpp  Wheel.hpp
src/motor/include/motor_alarm/: MotorAlarm.hpp
src/motor/include/motor_driver/: MotorDriver.hpp
src/motor/include/motor_encoder/: MotorEncoder.hpp
src/motor/include/odometry/: Odometry.hpp
src/motor/include/wheel/: MotorDriver.hpp  MotorEncoder.hpp  Rolling_median.hpp  Wheel.hpp
src/motor/src/: MotorAlarm.cpp  MotorDriver.cpp  MotorEncoder.cpp  Odometry.cpp  Wheel.cpp
src/motor/src/Odometry/: Odometry.cpp
src/motor/src/Wheel/: MotorDriver.cpp  MotorEncoder.cpp  Wheel.cpp
src/motor/test/: Wheel_test.cpp  motor_encoder_test.cpp
src/motor_driver_library/: .gitignore  CMakeLists.txt  MotorDriver.cpp  MotorDriver.hpp  RunMotor.hpp  compile.sh  motor_controller_test.cpp
src/motor_driver_library/include/motor_driver/: RunMotor.hpp  (+1 more)
src/motor_driver_library/src/: MotorDriver.cpp
src/motor_driver_library/test/: motor_driver_test.cpp
src/motor_encoder_library/: CMakeLists.txt  compile.sh
src/motor_encoder_library/src/: MotorAlarm.cpp  MotorEncoder.cpp
src/motor_encoder_library/test/: main.cpp  motor_encoder_test.cpp
(+648 files in other folders)
