<?xml version="1.0"?>
<package format="3">
  <name>bob</name>
  <version>0.0.0</version>
  <description>B.ob meta package</description>
  <maintainer email="jkan67.de@gmail.com">Josh Kannemeyer</maintainer>
  <maintainer email="luca.horstmann@bertrandt.com">Luca Horstmann</maintainer>
  <maintainer email="nooraldeen.yamk@bertrandt.com">Nooraldeen Yamk</maintainer>

  <author email="jkan67.de@gmail.com">Josh Kannemeyer</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>