<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_base</name>
  <version>0.0.0</version>
  <description>Bob base motor driver package</description>
  <maintainer email="jkan67.de@gmail.com">Josh Kannemeyer</maintainer>
  <maintainer email="luca.horstmann@bertrandt.com">Luca Horstmann</maintainer>
  <maintainer email="nooraldeen.yamk@bertrandt.com">Nooraldeen Yamk</maintainer>
  
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_controllers</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>