<!--Based on: https://github.com/TheNoobInventor/lidarbot/blob/main/lidarbot_base/package.xml-->
<!--Date of Retrieval: 17.05.2024-->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_base</name>
  <version>0.0.0</version>
  <description>Bob base motor driver package</description>

  <maintainer email="jkan67.de@gmail.com">Josh Kannemeyer</maintainer>
  <maintainer email="luca.horstmann@bertrandt.com">Luca Horstmann</maintainer>
  <maintainer email="nooraldeen.yamk@bertrandt.com">Nooraldeen Yamk</maintainer>

  <author email="denis.stogl@stoglrobotics.de">Dr.-Ing. Denis Štogl</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>bob_description</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

