<?xml version="1.0"?>
<package format="3">
  <name>bob_bringup</name>
  <version>0.0.0</version>
  <description>Bob bringup package</description>
  <maintainer email="jkan67.de@gmail.com">Josh Kannemeyer</maintainer>
  <maintainer email="luca.horstmann@bertrandt.com">Luca Horstmann</maintainer>
  <maintainer email="nooraldeen.yamk@bertrandt.com">Nooraldeen Yamk</maintainer>
  
  <license>CC-BY-SA-4.0 license </license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>theora_image_transport</depend>
  <depend>image_transport_plugins</depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>