<?xml version="1.0"?>
<package format="2">
  <name>bob_detection</name>
  <version>0.0.1</version>
  <description>Bob Detection using  for a differential drive robot in ROS2.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
 
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
