<?xml version="1.0"?>
<package format="3">
  <name>bob_simulation</name>
  <version>0.0.0</version>
  <description>Bob Simulation</description>
  
  <maintainer email="jkan67.de@gmail.com">Josh Kannemeyer</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>