<?xml version="1.0"?>
<package format="3">
  <name>gazebo_radar_plugin</name>
  <version>0.0.0</version>
  <description>The gazebo_radar_plugin package
This provides a Mode-C like radar response for each radar sensor.
</description>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gazebo_radar_plugin</url> -->

  <author email="tfoote@osrfoundation.org">Tully Foote</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rclcpp</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>