<?xml version="1.0"?>
<package format="3">
  <name>lidar_segmentation</name>
  <version>0.0.1</version>
  <description>Line segment to polygon transformation using lidar.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>obstacle_detector</exec_depend>
  <exec_depend>shapely</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
