<?xml version="1.0"?>
<package format="3">
  <name>map_ray_casting</name>
  <version>0.0.0</version>
  <description>Ray casting node for LiDAR and costmap</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
